syntax = "proto3";

package project.planton.provider.kubernetes.addon.postgresoperatorkubernetes.v1;

import "buf/validate/validate.proto";
import "project/planton/provider/kubernetes/addon/postgresoperatorkubernetes/v1/spec.proto";
import "project/planton/provider/kubernetes/addon/postgresoperatorkubernetes/v1/stack_outputs.proto";
import "project/planton/shared/metadata.proto";

//postgres-operator-kubernetes
message PostgresOperatorKubernetes {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = 'kubernetes.project-planton.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'PostgresOperatorKubernetes'];

  //metadata
  project.planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  PostgresOperatorKubernetesSpec spec = 4 [(buf.validate.field).required = true];

  //status
  PostgresOperatorKubernetesStatus status = 5;
}

//postgres-operator-kubernetes status.
message PostgresOperatorKubernetesStatus {
  //stack-outputs
  PostgresOperatorKubernetesStackOutputs outputs = 1;
}
